docs: 记录模块化实施结论并对齐设计文档
- AI_REPORT.md 追加本轮章节：基线、根因、处置、三处方案修正、验证与局限
- PROGRESS.md 标记 Main.java 模块化完成，更新后续可做项
- DESIGN-modularization.md 补第八至十节：实施记录、方案修正、不变量
- README 中英双语同步 src/ui 的视图 / 行为分离结构